--- a/app/globals.css
+++ b/app/globals.css
@@ -93,6 +93,8 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+    padding:100px;
+    margin: 0 auto;
 }
 
 a {
